--- a/FightSystem/pom.xml
+++ b/FightSystem/pom.xml
@@ -41,7 +41,15 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
